[metadata]
name = unused_analyzer
version = 0.1.0
description = A tool to analyze unused dependencies and files in Dart projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/unused_analyzer
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = .
exclude =
    tests*
    test*
    build*
    dist*
    *.egg-info*
