[metadata]
name = flutter_unused
version = 0.1.0
description = A tool to analyze unused dependencies and files in Flutter projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matan-h/flutter_unused
author = Matan-H
author_email = matan-h@matan-h.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where = .
exclude =
    tests*
    test*
    build*
    dist*
    *.egg-info*
